--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="/style.css"> -->
@@ -27,7 +29,9 @@
                 <div id="view-preferences_tree" class="dropdown__item">Tree</div>
                 <div id="view-preferences_list" class="dropdown__item">List</div>
             </div>
-            <button id="accountMenu" class="u-mar-l_1" data-dropdown-target="accountMenu__dropdown"></button>
+            <button id="accountMenu" class="u-mar-l_1" data-dropdown-target="accountMenu__dropdown">
+                <img src="" alt="" class="mainNav__profile-image">
+            </button>
             <div id="accountMenu__dropdown" class="dropdown u-p_absolute u-d_none">
                 <a href="#/my-trees" class="dropdown__item">My trees</a>
                 <a href="#/profile" class="dropdown__item">Profile</a>
@@ -327,6 +331,5 @@
     <script src="scripts/routing.js"></script>
     <script src="scripts/index.js"></script>
     <!-- <script src="scripts/settings.js"></script> -->
-    <script src="scripts/dropdown.js"></script>
     </body>
 </html>
