--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 </head>
     <body>
         <nav class="mainNav u-mar-b_6">
+            
             <h1 class="u-mar-b_0 u-c_white logo">
                 <a id="mainNav_logo" href="/" class="u-remove-link-style">MILY</a>
             </h1>
@@ -102,7 +103,8 @@
                     </ul>
                     <div class="detailsPanel__information">
                         <div class="detailsPanel__profileImage u-mar-lr_auto u-mar-b_3"></div>
-                        <div class="detailsPanel__firstName u-mar-lr_auto header_m u-ta_center u-mar-b_5"></div>
+                        <div class="detailsPanel__firstName u-mar-lr_auto header_m u-ta_center"></div>
+                        <p class="detailsPanel__fullName u-mar-lr_auto u-ta_center u-mar-b_6 u-text_lowest u-font-size_14 u-mar-t_1"></p>
                         <h6 class="u-mar-b_4">Details</h6>
                         <div class="detailsPanel__metaData u-mar-b_7"></div>
                         <h6 class="u-mar-b_4">Immediate family</h6>
