--- a/public/index.html
+++ b/public/index.html
@@ -12,27 +12,27 @@
     <title>Mily</title>
 </head>
     <body>
-        <nav class="mainNav u-mar-b_6">
+        <nav class="mainNav">
             
             <h1 class="u-mar-b_0 u-c_white logo">
                 <a id="mainNav_logo" href="/" class="u-remove-link-style">MILY</a>
             </h1>
             <div class="buttonGroup u-mar-l_auto">
-                <a class="button" id="log-in_button" href="/">Log in</a>
-                <a class="button" id="sign-up_button" href="/">Sign up</a>
+                <a class="button" id="log-in_button" href="/#/log-in">Log in</a>
+                <a class="button" id="sign-up_button" href="/#/sign-up">Sign up</a>
             </div>
             <button id="notification_indicator" data-dropdown-target="notification_menu" class="u-mar-l_auto iconButton u-d_none"><i class="fa fa-bell"></i></button>
             <div id="notification_menu" class="dropdown u-p_absolute">
             </div>
             <!-- <button id="search_button" class="u-mar-l_2 u-mar-r_1 iconButton"><i class="fa fa-search"></i></button> -->
-            <button id="view-preferences_button" class="u-mar-l_2 u-mar-r_2 iconButton" data-dropdown-target="view-preferences"><i class="fa fa-eye"></i></button>
+            <button id="view-preferences_button" class="u-mar-l_2 u-mar-r_2 iconButton u-d_none" data-dropdown-target="view-preferences"><i class="fa fa-eye"></i></button>
             <div id="view-preferences" class="dropdown u-d_none u-p_absolute">
                 <div id="view-preferences_tree" class="dropdown__item">Tree</div>
                 <div id="view-preferences_list" class="dropdown__item">List</div>
-                <div id="view-preferences_list" class="dropdown__item">
+                <!-- <div id="view-preferences_list" class="dropdown__item">
                     <button class="iconButton view-preferences_zoomIn"><i class="fa fa-plus"></i></button>
                     <button class="iconButton u-mar-l_auto view-preferences_zoomOut"><i class="fa fa-minus"></i></button>
-                </div>
+                </div> -->
             </div>
             <button id="accountMenu" class="u-mar-l_1" data-dropdown-target="accountMenu__dropdown"></button>
             <div id="accountMenu__dropdown" class="dropdown u-p_absolute u-d_none">
@@ -48,6 +48,57 @@
 
         <div style="display:none" data-view="account-verification">
             <div class="debugMessage"></div>
+        </div>
+
+        <div style="display:none" data-view="sign-up">
+            <form id="sign-up_form" class="ifAuth--hide card u-mar-lr_auto">
+                <div class="card__header u-pad_0">
+                    <img src="/assets/img/wavy-sm--yellow.svg" alt="decoration">
+                </div>
+                <div class="card__content">
+                    <h2>Sign up</h2>
+                    <div class="inputGroup">
+                        <label for="sign_up_email">Email</label>
+                        <input type="email" name="sign-up_email" placeholder="Email">
+                    </div>
+                    <div class="inputGroup">
+                        <label for="sign-up_password">Password</label>
+                        <input type="password" name="sign-up_password" placeholder="Password">
+                    </div>
+                    <div class="inputGroup">
+                        <input name="sign-up_age-verification" type="checkbox">
+                        <label for="sign-up_age-verification.">I'm 13 years or older.</label>
+                    </div>
+                    <p class="message"></p>
+                    <p class="error"></p>
+                </div>
+                <div class="card__footer">
+                    <button class="u-w_full">Sign up</button>
+                </div>
+            </form>
+        </div>
+
+        <div style="display:none" data-view="log-in">
+            <form id="sign-in_form" class="card u-mar-lr_auto">
+                <div class="card__header u-pad_0">
+                    <img src="/assets/img/wavy-sm--yellow.svg" alt="decoration">
+                </div>
+                <div class="card__content">
+                    <h2>Log in</h2>
+                    <div class="inputGroup">
+                        <label for="sign_in_email">Email</label>
+                        <input type="email" name="sign-in_email" placeholder="Email">
+                    </div>
+                    <div class="inputGroup">
+                        <label for="password">Password</label>
+                        <input type="password" name="sign-in_password" placeholder="Password">
+                        <p class="message"></p>
+                    </div>
+                </div>
+                <div class="card__footer">
+                    <button type="submit" class="u-w_full">Log in</button>
+                </div>
+            </form>
         </div>
 
         <div style="display:none" data-view="my-trees">
@@ -84,8 +135,9 @@
             <div class="debugMessage"></div>
             <section id="mainContent">
 
-            <section id="familyTree"></section>
-            <div id="panzoomNode"></div>
+            <section id="familyTree">
+                <div id="branchContainer"></div>
+            </section>
             <!-- <svg id="leaf_connections" width="160" height="280" xmlns="http://www.w3.org/2000/svg" version="1.1"></svg> -->
                 <aside id="detailsPanel">
                     <nav class="detailsPanel__actions u-mar-b_4">
@@ -109,9 +161,9 @@
                     <div class="detailsPanel__information">
                         <div class="detailsPanel__profileImage u-mar-lr_auto u-mar-b_3"></div>
                         <div class="detailsPanel__firstName u-mar-lr_auto header_m u-ta_center"></div>
-                        <p class="detailsPanel__fullName u-mar-lr_auto u-ta_center u-mar-b_6 u-text_lowest u-font-size_14 u-mar-t_1"></p>
-                        <h6 class="u-mar-b_4">Details</h6>
-                        <div class="detailsPanel__metaData u-mar-b_7"></div>
+                        <p class="detailsPanel__fullName u-mar-lr_auto u-ta_center u-mar-b_6 u-font-size_14 u-mar-t_1"></p>
+                        <!-- <h6 class="u-mar-b_4">Details</h6> -->
+                        <div class="detailsPanel__metaData u-mar-b_7 u-mar-t_7"></div>
                         <h6 class="u-mar-b_4">Immediate family</h6>
                         <div class="detailsPanel__immediateFamily"></div>
                         <li id="remove-leaf-action" class="button danger secondary u-w_full u-mar-t_8">Remove from tree</li>
@@ -133,52 +185,6 @@
 
         <div id="home" class="u-d_flex" style="display:none" data-view="homepage">
             <div class="debugMessage"></div>
-            <form id="sign-in_form" class="card u-mar-l_auto u-mar-r_2">
-                <div class="card__header u-pad_0">
-                    <img src="/assets/img/wavy-sm--yellow.svg" alt="decoration">
-                </div>
-                <div class="card__content">
-                    <h2>Log in</h2>
-                    <div class="inputGroup">
-                        <label for="sign_in_email">Email</label>
-                        <input type="email" name="sign-in_email" placeholder="Email">
-                    </div>
-                    <div class="inputGroup">
-                        <label for="password">Password</label>
-                        <input type="password" name="sign-in_password" placeholder="Password">
-                        <p class="message"></p>
-                    </div>
-                </div>
-                <div class="card__footer">
-                    <button type="submit" class="u-w_full">Log in</button>
-                </div>
-            </form>
-    
-            <form id="sign-up_form" class="ifAuth--hide card u-mar-r_auto u-mar-l_2">
-                <div class="card__header u-pad_0">
-                    <img src="/assets/img/wavy-sm--yellow.svg" alt="decoration">
-                </div>
-                <div class="card__content">
-                    <h2>Sign up</h2>
-                    <div class="inputGroup">
-                        <label for="sign_up_email">Email</label>
-                        <input type="email" name="sign-up_email" placeholder="Email">
-                    </div>
-                    <div class="inputGroup">
-                        <label for="sign-up_password">Password</label>
-                        <input type="password" name="sign-up_password" placeholder="Password">
-                    </div>
-                    <div class="inputGroup">
-                        <input name="sign-up_age-verification" type="checkbox">
-                        <label for="sign-up_age-verification.">I'm 13 years or older.</label>
-                    </div>
-                    <p class="message"></p>
-                    <p class="error"></p>
-                </div>
-                <div class="card__footer">
-                    <button class="u-w_full">Sign up</button>
-                </div>
-            </form>
         </div>
 
         <form id="create-tree_form" class="card u-mar-lr_auto u-d_none">
